# kelp

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
deploy/: Dockerfile  README.md  deploy.sh
deploy/ansible/: playbook.yml
deploy/ansible/roles/caddy-hardened/defaults/: main.yml
deploy/ansible/roles/caddy-hardened/files/: caddy-ratelimit.conf
deploy/ansible/roles/caddy-hardened/handlers/: main.yml
deploy/ansible/roles/caddy-hardened/tasks/: main.yml
deploy/ansible/roles/caddy-hardened/templates/: Caddyfile.j2  caddy-ratelimit.local.j2
deploy/terraform/: main.tf  outputs.tf  variables.tf
src/kelp/: __init__.py  __main__.py
src/kelp/cesr/: __init__.py  events.py  parser.py
src/kelp/sources/: __init__.py  base.py  file.py  lmdb.py  oobi.py
src/kelp/web/: __init__.py  main.py
src/kelp/web/static/: app.js  style.css  tokens.css
src/kelp/web/templates/: base.html  index.html
src/kelp/web/templates/partials/: error.html  event_detail.html  event_list.html  main_content.html  main_content_with_tab_bar.html  tab_bar.html  tab_content.html
